[package]
name = "firewall"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
